[package]
name = "iceland"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to create and manage focused digital areas"


[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"

chrono = { version = "0.4", features = ["clock", "serde"] }

serde = { version = "1", features = ["derive"] }

dialoguer = "0.11"
