[package]
name = "iceland"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
csv = "1.4"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"

