[package]
name = "iceland"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "cargo"] }
csv = "1.3"
dialoguer = "0.11"
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
